# opencv-nix

./: CMakeLists.txt  Makefile  README.md  flake.nix
cmake/: zig-toolchain.cmake
